--- a/cmp/templates/cmp/compras_list.html
+++ b/cmp/templates/cmp/compras_list.html
@@ -5,30 +5,32 @@
 <div class="card shadow mb-4">
     <!-- Card Header - Dropdown -->
     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-      <h6 class="m-0 font-weight-bold text-primary">Listado de Proveedores</h6>
+      <h6 class="m-0 font-weight-bold text-primary">Listado de Compras</h6>
       <div class="dropdown no-arrow">
         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-          <div class="dropdown-header">Acciones</div>
-          <a class="dropdown-item" onclick="return abrir_modal('{% url 'cmp:proveedor_new' %}')"><i class="far fa-calendar-plus"></i>  Nuevo</a>
+          <div class="dropdown-header">Acciones</div>          
+          <a class="dropdown-item" href="{% url 'cmp:compras_new' %}"><i class="far fa-calendar-plus"></i> Nueva</a>
         </div>
       </div>
     </div>
     <!-- Card Body -->
     <div class="card-body">
         {% if not obj %}
-            <div class="alert alert-info">No hay Proveedores</div> 
+            <div class="alert alert-info">No hay Compras</div> 
         {% else %}
         <table class= "table table-striped table-hover dt-responsive nowrap" style="width:100%">
             <thead>
                 <th>Id</th>
-                <th>Descripción</th>
-                <th>Dirección</th>
-                <th>Contacto</th>
-                <th>Teléfono</th>
-                <th>EMail</th>                
+                <th>Fecha</th>
+                <th>Observación</th>
+                <th>Nro. Factura</th>
+                <th>F. factura</th>
+                <th>Sub Total</th>                
+                <th>Descuento</th>
+                <th>Total</th>
                 <th>Estado</th>
                 <th class="all">Acciones</th>
             </thead>
@@ -36,18 +38,18 @@
                 {% for item in obj %}
                 <tr>
                     <td>{{ item.id}}</td>
-                    <td>{{ item.descripcion }}</td>
-                    <td>{{ item.direccion }}</td>
-                    <td>{{ item.contacto}}</td>
-                    <td>{{ item.telefono }}</td>
-                    <td>{{ item.email }}</td>
+                    <td>{{ item.fecha_compra }}</td>
+                    <td>{{ item.observacion }}</td>
+                    <td>{{ item.no_factura}}</td>
+                    <td>{{ item.fecha_factrua }}</td>
+                    <td>{{ item.subtotal }}</td>
+                    <td>{{ item.descuento }}</td>
+                    <td>{{ item.total }}</td>
                     <td>{{ item.estado|yesno:"Activo, Inactivo" }}</td>
 
                     <td>
-                        <button class="btn btn-warning btn-circle" onclick="return abrir_modal('{% url 'cmp:proveedor_edit' item.id %}')">                           
-                          <i class="far fa-edit"></i> </button>
-                        <button class="btn btn-warning btn-circle" onclick="return abrir_modal('{% url 'cmp:proveedor_inactivar' item.id %}')">                           
-                          <i class="far fa-times-circle"></i> </button>
+                        <a class="btn btn-warning btn-circle" href="#"><i class="far fa-edit"></i></a>                          
+                          
                     </td>
                 </tr>
                 {% endfor %}
